# weather

./: CMakeLists.txt  README.md  databasemanager.cpp  databasemanager.h  filemanager.cpp  filemanager.h  forecastdata.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_test.cpp  weatherchart.cpp  weatherchart.h  weatherdata.h  weatherservice.cpp  weatherservice.h  weatherservice_test.cpp
.github/workflows/: release.yml
data/: cities.db
resources/: resources.qrc
